display query phrase results

--- a/ui/query_phrases.html
+++ b/ui/query_phrases.html
@@ -79,7 +79,12 @@
     </div>
     <div class="results-panel panel">
       <p><span id="result-count">--</span> results found</p>
-      <table id="results-table" class="results-table"></table>
+      <table class="results-table">
+        <thead>
+          <tr><th>&nbsp;</th><th>parent</th><th>dur</th><th>count</th><th>hz</th><th>dur</th><th>pow</th><th>hzStd</th><th>beatStd</th><th>&nbsp;</th><th>&nbsp;</tr>
+        </thead>
+        <tbody id="results"></tbody>
+      </table>
     </div>
   </div>
 
