--- a/ui/query_phrases.html
+++ b/ui/query_phrases.html
@@ -45,35 +45,35 @@
 
         <fieldset>
           <legend>Select notes</legend>
-          <input type="checkbox" name="select-notes" id="input-note-a" value="A" /> <label for="input-note-a">A</label>
-          <input type="checkbox" name="select-notes" id="input-note-as" value="A#" /> <label for="input-note-as">A#</label>
-          <input type="checkbox" name="select-notes" id="input-note-b" value="B" /> <label for="input-note-b">B</label>
-          <input type="checkbox" name="select-notes" id="input-note-bs" value="B#" /> <label for="input-note-bs">B#</label>
-          <input type="checkbox" name="select-notes" id="input-note-c" value="C" /> <label for="input-note-c">C</label>
-          <input type="checkbox" name="select-notes" id="input-note-cs" value="C#" /> <label for="input-note-cs">C#</label>
-          <input type="checkbox" name="select-notes" id="input-note-d" value="D" /> <label for="input-note-d">D</label>
-          <input type="checkbox" name="select-notes" id="input-note-ds" value="D#" /> <label for="input-note-ds">D#</label>
-          <input type="checkbox" name="select-notes" id="input-note-e" value="E" /> <label for="input-note-e">E</label>
-          <input type="checkbox" name="select-notes" id="input-note-es" value="E#" /> <label for="input-note-es">E#</label>
-          <input type="checkbox" name="select-notes" id="input-note-f" value="F" /> <label for="input-note-f">F</label>
-          <input type="checkbox" name="select-notes" id="input-note-fs" value="F#" /> <label for="input-note-fs">F#</label>
-          <input type="checkbox" name="select-notes" id="input-note-g" value="G" /> <label for="input-note-g">G</label>
-          <input type="checkbox" name="select-notes" id="input-note-gs" value="G#" /> <label for="input-note-gs">G#</label>
+          <label for="input-note-a"><input type="checkbox" name="select-notes" id="input-note-a" value="A" /> A</label>
+          <label for="input-note-as"><input type="checkbox" name="select-notes" id="input-note-as" value="A#" /> A#</label>
+          <label for="input-note-b"><input type="checkbox" name="select-notes" id="input-note-b" value="B" /> B</label>
+          <label for="input-note-bs"><input type="checkbox" name="select-notes" id="input-note-bs" value="B#" /> B#</label>
+          <label for="input-note-c"><input type="checkbox" name="select-notes" id="input-note-c" value="C" /> >C</label>
+          <label for="input-note-cs"><input type="checkbox" name="select-notes" id="input-note-cs" value="C#" /> C#</label>
+          <label for="input-note-d"><input type="checkbox" name="select-notes" id="input-note-d" value="D" /> D</label>
+          <label for="input-note-ds"><input type="checkbox" name="select-notes" id="input-note-ds" value="D#" /> D#</label>
+          <label for="input-note-e"><input type="checkbox" name="select-notes" id="input-note-e" value="E" /> E</label>
+          <label for="input-note-es"><input type="checkbox" name="select-notes" id="input-note-es" value="E#" /> E#</label>
+          <label for="input-note-f"><input type="checkbox" name="select-notes" id="input-note-f" value="F" /> F</label>
+          <label for="input-note-fs"><input type="checkbox" name="select-notes" id="input-note-fs" value="F#" /> F#</label>
+          <label for="input-note-g"><input type="checkbox" name="select-notes" id="input-note-g" value="G" /> G</label>
+          <label for="input-note-gs"><input type="checkbox" name="select-notes" id="input-note-gs" value="G#" /> G#</label>
         </fieldset>
         <fieldset>
           <legend>Sort by</legend>
-          <input type="radio" name="select-sort" id="input-sort-count" value="count" /> <label for="input-sort-count">Count</label>
-          <input type="radio" name="select-sort" id="input-sort-dur" value="dur" /> <label for="input-sort-dur">Duration</label>
-          <input type="radio" name="select-sort" id="input-sort-hz" value="hzMean" /> <label for="input-sort-hz">Hz</label>
-          <input type="radio" name="select-sort" id="input-sort-pow" value="powMean" /> <label for="input-sort-pow">Power</label>
-          <input type="radio" name="select-sort" id="input-sort-ndur" value="durMean" /> <label for="input-sort-ndur">Note duration</label>
-          <input type="radio" name="select-sort" id="input-sort-hzstd" value="hzStd" /> <label for="input-sort-hzstd">Hz variance</label>
-          <input type="radio" name="select-sort" id="input-sort-beatstd" value="beatStd" checked /> <label for="input-sort-beatstd">Beat variance</label>
+          <label for="input-sort-count"><input type="radio" name="select-sort" id="input-sort-count" value="count" /> Count</label>
+          <label for="input-sort-dur"><input type="radio" name="select-sort" id="input-sort-dur" value="dur" /> Duration</label>
+          <label for="input-sort-hz"><input type="radio" name="select-sort" id="input-sort-hz" value="hzMean" /> Hz</label>
+          <label for="input-sort-pow"><input type="radio" name="select-sort" id="input-sort-pow" value="powMean" /> Power</label>
+          <label for="input-sort-ndur"><input type="radio" name="select-sort" id="input-sort-ndur" value="durMean" /> Note duration</label>
+          <label for="input-sort-hzstd"><input type="radio" name="select-sort" id="input-sort-hzstd" value="hzStd" /> Hz variance</label>
+          <label for="input-sort-beatstd"><input type="radio" name="select-sort" id="input-sort-beatstd" value="beatStd" checked /> Beat variance</label>
         </fieldset>
         <fieldset>
           <legend>Sort direction</legend>
-          <input type="radio" name="select-direction" id="input-sort-asc" value="1" /> <label for="input-sort-asc">Asc</label>
-          <input type="radio" name="select-direction" id="input-sort-desc" value="-1" checked /> <label for="input-sort-desc">Desc</label>
+          <label for="input-sort-asc"><input type="radio" name="select-direction" id="input-sort-asc" value="1" /> Asc</label>
+          <label for="input-sort-desc"><input type="radio" name="select-direction" id="input-sort-desc" value="-1" checked /> Desc</label>
         </fieldset>
       </form>
     </div>
