query: add filter for showing just saved or unsaved entries

--- a/ui/query_phrases.html
+++ b/ui/query_phrases.html
@@ -75,6 +75,12 @@
           <label for="input-sort-asc"><input type="radio" name="select-direction" id="input-sort-asc" value="1" /> Asc</label>
           <label for="input-sort-desc"><input type="radio" name="select-direction" id="input-sort-desc" value="-1" checked /> Desc</label>
         </fieldset>
+        <fieldset>
+          <legend>Saved entries</legend>
+          <label for="input-saved-all"><input type="radio" name="select-saved" id="input-saved-all" value="all" checked /> All</label>
+          <label for="input-unsaved"><input type="radio" name="select-saved" id="input-unsaved" value="unsaved" /> Just unsaved</label>
+          <label for="input-saved"><input type="radio" name="select-saved" id="input-saved" value="saved" /> Just saved</label>
+        </fieldset>
       </form>
     </div>
     <div class="results-panel panel">
