--- a/ui/query_phrases.html
+++ b/ui/query_phrases.html
@@ -81,6 +81,10 @@
           <label for="input-unsaved"><input type="radio" name="select-saved" id="input-unsaved" value="unsaved" /> Just unsaved</label>
           <label for="input-saved"><input type="radio" name="select-saved" id="input-saved" value="saved" /> Just saved</label>
         </fieldset>
+        <fieldset>
+          <legend>Keyword</legend>
+          <input type="text" name="input-keyword" id="input-keyword" value="" />
+        </fieldset>
       </form>
     </div>
     <div class="results-panel panel">
