--- a/ui/query_phrases.html
+++ b/ui/query_phrases.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="css/query.css">
 </head>
 
 <body>
