edit phrases: load audio

--- a/ui/edit_phrases.html
+++ b/ui/edit_phrases.html
@@ -14,8 +14,10 @@
 
 <body>
   <div id="app" class="app">
-    <div id="editor" class="editor">
-      <canvas id="spectrogram" class="spectrogram"></canvas>
+    <div class="editor">
+      <div id="spectrogram-wrapper" class="spectrogram-wrapper">
+        <canvas id="spectrogram" class="spectrogram"></canvas>
+      </div>
     </div>
     <div class="toolbar">
       <label for="select-audio">Select audio</label>
