--- a/ui/edit_phrases.html
+++ b/ui/edit_phrases.html
@@ -17,6 +17,7 @@
     <div class="editor">
       <div id="spectrogram-wrapper" class="spectrogram-wrapper">
         <canvas id="spectrogram" class="spectrogram"></canvas>
+        <div id="phrases" class="phrases"></div>
       </div>
     </div>
     <div class="toolbar">
@@ -26,6 +27,7 @@
   </div>
 
   <script src="js/vendor/jquery-3.3.1.min.js"></script>
+  <script src="js/vendor/jquery-ui.drag.resize.min.js"></script>
   <script src="js/vendor/underscore-min.js"></script>
   <script src="js/vendor/howler.min.js"></script>
   <script src="js/vendor/papaparse.min.js"></script>
