implement loop phrases ui

--- a/ui/index.html
+++ b/ui/index.html
@@ -28,6 +28,7 @@
       <li><a href="browse_phrases.html">Browse phrases</a></li>
       <li><a href="query_phrases.html">Query phrases</a></li>
       <li><a href="edit_phrases.html">Edit phrases</a></li>
+      <li><a href="loop_phrases.html">Loop phrases</a></li>
     </ol>
   </div>
 </body>
