refactor ui code

--- a/ui/query_phrases.html
+++ b/ui/query_phrases.html
@@ -104,6 +104,8 @@
   <script src="js/vendor/underscore-min.js"></script>
   <script src="js/vendor/howler.min.js"></script>
   <script src="js/vendor/papaparse.min.js"></script>
+  <script src="js/lib/utils.js"></script>
+  <script src="js/lib/player.js"></script>
   <script src="js/query_phrases.js"></script>
 </body>
 
