--- a/ui/browse_phrases.html
+++ b/ui/browse_phrases.html
@@ -19,6 +19,8 @@
   <script src="js/vendor/underscore-min.js"></script>
   <script src="js/vendor/howler.min.js"></script>
   <script src="js/vendor/papaparse.min.js"></script>
+  <script src="js/lib/utils.js"></script>
+  <script src="js/lib/player.js"></script>
   <script src="js/browse_phrases.js"></script>
 </body>
 
