--- a/ui/edit_phrases.html
+++ b/ui/edit_phrases.html
@@ -32,6 +32,7 @@
   <script src="js/vendor/underscore-min.js"></script>
   <script src="js/vendor/howler.min.js"></script>
   <script src="js/vendor/papaparse.min.js"></script>
+  <script src="js/lib/utils.js"></script>
   <script src="js/edit_phrases.js"></script>
 </body>
 
