--- a/ui/loop_phrases.html
+++ b/ui/loop_phrases.html
@@ -21,6 +21,7 @@
   <script src="js/vendor/underscore-min.js"></script>
   <script src="js/vendor/howler.min.js"></script>
   <script src="js/vendor/papaparse.min.js"></script>
+  <script src="js/lib/utils.js"></script>
   <script src="js/loop_phrases.js"></script>
 </body>
 
