first pass at tsne ui

--- a/ui/tsne.html
+++ b/ui/tsne.html
@@ -13,12 +13,18 @@
 </head>
 
 <body>
-  <div id="app" class="app"></div>
+  <div id="app" class="app">
+    <div id="tsne" class="tsne"></div>
+    <div id="sequencer" class="sequencer"></div>
+  </div>
 
   <script src="js/vendor/jquery-3.3.1.min.js"></script>
   <script src="js/vendor/underscore-min.js"></script>
   <script src="js/vendor/howler.min.js"></script>
   <script src="js/vendor/papaparse.min.js"></script>
+  <script src="js/vendor/panzoom.min.js"></script>
+  <script src="js/lib/player.js"></script>
+  <script src="js/lib/utils.js"></script>
   <script src="js/tsne.js"></script>
 </body>
 
